traversal.snake.Snake.scala.error
Compilation error:
Snake:2: error: Missing closing brace `}' assumed here
def PositionFinale(){
^Snake:2: error: expected class or object definition
def PositionFinale(){
^